--- a/Frontend/my-app/src/Page/search.css
+++ b/Frontend/my-app/src/Page/search.css
@@ -1,19 +1,39 @@
-
+ 
+ *{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+ }
+ body{
+    background-color: rgb(163, 240, 240);
+ }
 
  .main{
     /* border: 1px solid red; */
     margin-top: 15px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    gap : 20px;
+    margin-bottom: 20px;
+    /* background-color: white; */
+    
  }
 
 .grid-box{
     border : 1px solid black;
-    margin-top: 20px;
+    margin-top: 40px;
     width: 80%;
     border-radius: 4%;
     margin: auto;
+    padding-bottom: 9px;
+    padding-top: 15px;
+    background-color: white;
+    line-height: 25px;
 }
 .imgDiv{
-    width: 70%;
+    width: 50%;
+    height: 190px;
+    margin-top: 15px;
+    /* border: 1px solid red; */
+    border-radius: 12px;
 }
